# kggbot2

./: .env.dev  .env.prod  README.md  pyproject.toml  requirements.txt
src/plugins/kggbot/: __init__.py  model.py  reply.py  utils.py
